# fcitx5-mcbopomofo

./: README.md
data/: CMakeLists.txt
